# codeyun

./: .env.example  .gitignore  AGENTS.md  AI_CLUSTER_CONTEXT.md  AI_CONTEXT.md  README.md  TODO.md  check_path.py  debug_json.py  dev.py  pyproject.toml  reproduce_connection.py  reset_pwd.py  test_device_refactor.py  test_flow.py
backend/: app.py  db.py  db_cleanup.py  db_views.py  fix_device_id.py  inspect_db.py  migrate_edges.py  migrate_notes.py  migrate_old_db.py  migrate_pids.py  models.py  pyproject.toml  schemas.py
backend/api/: admin.py  agent.py  auth.py  device.py  device_control.py  device_entries.py  fanxiu.py  filesystem.py  notes.py  task_manager.py  upload.py  websocket_manager.py
backend/core/: auth.py  bootstrap.py  device.py  note_walker.py  settings.py  storage.py
backend/migrations/: manager.py
backend/scripts/: drop_device_table.py  get_machine_token.py  migrate_device_to_userdevice.py  migrate_node_type_status.py
backend/tests/: conftest.py  test_backend.py  test_cluster_api.py  test_device_load.py  test_device_sync.py  test_integration.py  test_manual_remote_connection.py  test_reassociation.py  test_task_manager.py
backend/tests/manual/: test_flow.py
deploy/: setup_server.sh  update.sh
docs/: DEPLOY_UBUNTU24.md  task_manager_design.md  启动程序_管理员权限.md  安全与账号设计.md  集群管理与权限设计.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
scripts/: README.md  build_dsp_static.py  check_prod.py  fix_custom_fields.py  inspect_custom_fields.py
tests/: test_custom_fields.py
(+91 files in other folders)
