[project]
name = "codeyun-backend"
version = "0.1.0"
description = "Local backend for CodeYun tools"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "chardet>=5.2.0",
    "pydantic>=2.6.0",
    "psutil>=5.9.0",
    "apscheduler>=3.10.0,<4.0.0",
    "websockets>=12.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
